// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radiobutton renders 1`] = `
<div
  className="flex flex-col gap-2"
>
  <p>
    Please select your age:
  </p>
  <label
    className="sc-bvBvdO rvXKN"
    htmlFor="age1"
  >
    <input
      aria-label="0 - 30"
      className="sc-dXqfbs hgoNug"
      id="age1"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-jGoKbf jrBhKJ"
    >
      <div
        className="sc-kCuNey fDYDCr"
      />
    </span>
    <span
      className="sc-dbkbXZ cYUhcf"
    >
      0 - 30
    </span>
  </label>
  <label
    className="sc-bvBvdO rvXKN"
    htmlFor="age2"
  >
    <input
      aria-label="31 - 60"
      className="sc-dXqfbs hgoNug"
      id="age2"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-jGoKbf jrBhKJ"
    >
      <div
        className="sc-kCuNey fDYDCr"
      />
    </span>
    <span
      className="sc-dbkbXZ cYUhcf"
    >
      31 - 60
    </span>
  </label>
  <label
    className="sc-bvBvdO rvXKN"
    htmlFor="age3"
  >
    <input
      aria-label="61 - 100"
      className="sc-dXqfbs hgoNug"
      id="age3"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-jGoKbf jrBhKJ"
    >
      <div
        className="sc-kCuNey fDYDCr"
      />
    </span>
    <span
      className="sc-dbkbXZ cYUhcf"
    >
      61 - 100
    </span>
  </label>
</div>
`;

exports[`Radiobutton renders Checked 1`] = `
<label
  className="sc-bvBvdO rvXKN"
>
  <input
    checked={true}
    className="sc-dXqfbs hgoNug"
    onClick={[Function]}
    readOnly={true}
    type="radio"
  />
  <span
    className="sc-jGoKbf jrBhKJ"
  >
    <div
      className="sc-kCuNey fDYDCr"
    />
  </span>
  <span
    className="sc-dbkbXZ cYUhcf"
  >
    Checked radio button
  </span>
</label>
`;

exports[`Radiobutton renders Disabled 1`] = `
<label
  className="sc-bvBvdO rvXKN"
>
  <input
    className="sc-dXqfbs hgoNug"
    disabled={true}
    onClick={[Function]}
    type="radio"
  />
  <span
    className="sc-jGoKbf jrBhKJ"
  >
    <div
      className="sc-kCuNey fDYDCr"
    />
  </span>
  <span
    className="sc-dbkbXZ cYUhcf"
  >
    Disabled radio button
  </span>
</label>
`;

exports[`Radiobutton renders No label 1`] = `
<div
  dir="rtl"
>
  <label
    className="sc-bvBvdO rvXKN"
    htmlFor="button1"
  >
    <input
      className="sc-dXqfbs hgoNug"
      id="button1"
      name="button"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-jGoKbf jrBhKJ"
    >
      <div
        className="sc-kCuNey fDYDCr"
      />
    </span>
  </label>
</div>
`;

exports[`Radiobutton renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col gap-2"
  >
    <p>
      Please select your age:
    </p>
    <label
      className="sc-bvBvdO rvXKN"
      htmlFor="age1"
    >
      <input
        aria-label="0 - 30"
        className="sc-dXqfbs hgoNug"
        id="age1"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-jGoKbf jrBhKJ"
      >
        <div
          className="sc-kCuNey fDYDCr"
        />
      </span>
      <span
        className="sc-dbkbXZ cYUhcf"
      >
        0 - 30
      </span>
    </label>
    <label
      className="sc-bvBvdO rvXKN"
      htmlFor="age2"
    >
      <input
        aria-label="31 - 60"
        className="sc-dXqfbs hgoNug"
        id="age2"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-jGoKbf jrBhKJ"
      >
        <div
          className="sc-kCuNey fDYDCr"
        />
      </span>
      <span
        className="sc-dbkbXZ cYUhcf"
      >
        31 - 60
      </span>
    </label>
    <label
      className="sc-bvBvdO rvXKN"
      htmlFor="age3"
    >
      <input
        aria-label="61 - 100"
        className="sc-dXqfbs hgoNug"
        id="age3"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-jGoKbf jrBhKJ"
      >
        <div
          className="sc-kCuNey fDYDCr"
        />
      </span>
      <span
        className="sc-dbkbXZ cYUhcf"
      >
        61 - 100
      </span>
    </label>
  </div>
</div>
`;
